--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,12 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+        python-version:
+          - [3.8]
     steps:
       - uses: actions/checkout@v2
-      - uses: goanpeca/setup-miniconda@v1.7.0
+      - uses: actions/setup-python@v2
         with:
-          environment-file: binder/environment.yml
+          python-version: ${{ matrix.python-version }}
+      - run: pip install -r requirements.txt
       - run: doit -n4 || doit
