--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os:
-          - ubuntu-latest
-        python-version:
-          - [3.8]
+        os: [ubuntu-latest]
+        python-version: [3.8]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
