--- a/{{ cookiecutter.name }}/src/{{ cookiecutter.py_module }}/{{ cookiecutter.js_module }}/package.json
+++ b/{{ cookiecutter.name }}/src/{{ cookiecutter.py_module }}/{{ cookiecutter.js_module }}/package.json
@@ -1,5 +1,6 @@
 {
   "name": "{{ cookiecutter.js_module }}",
+  "version": "0.1.0",
   "main": "lib/index.js",
   "jupyterlab": {
     "extension": "lib/plugin.js",
