--- a/{{ cookiecutter.name }}/pyproject.toml
+++ b/{{ cookiecutter.name }}/pyproject.toml
@@ -1,9 +1,10 @@
-# https://flit.readthedocs.io
+# {{ cookiecutter.py_module }} project data
 
 [build-system]
 requires = ["flit_core >=2,<4"]
 build-backend = "flit_core.buildapi"
 
+# https://flit.readthedocs.io
 [tool.flit.metadata]
 module = "{{cookiecutter.name}}"
 author = "{{cookiecutter.author}}"
