more work on workflow, doit, packaging

--- a/{{ cookiecutter.name }}/setup.cfg
+++ b/{{ cookiecutter.name }}/setup.cfg
@@ -1,4 +1,5 @@
 [metadata]
+name = {{ cookiecutter.py_module }}
 description = {{ cookiecutter.short_description }}
 long_description = file: readme.md
 long_description_content_type = text/markdown
@@ -23,7 +24,7 @@ classifiers =
 install_requires =
     jupyterlab ==3.0.0rc5
 package_dir =
-    = src/py
+    = src
 packages = find:
 include_package_data = True
 zip_safe = False
