--- a/{{ cookiecutter.name }}/requirements-dev.txt
+++ b/{{ cookiecutter.name }}/requirements-dev.txt
@@ -5,7 +5,7 @@ ipywidgets
 jupyterlab >=3.0.0rc5
 jupyterlab_server >=2.0.0rc1
 jupyterlab-widgets >=1.0.0a5
-matplotlib-base
+matplotlib
 nbgitpuller
 pandas
 pytest
